# VectorEmbeddingLibrary

./: README.md  pyproject.toml  pytest.ini
src/VectorEmbeddingLibrary/: __init__.py  config.py  config.yaml  embedding.py  main.py  similarity_search.py
tests/: test_config.py  test_embedding.py  test_end_to_end.py  test_integration.py  test_similarity_search.py
