[tool.poetry]
name = "vectorembeddinglibrary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "VectorEmbeddingLibrary", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.47.1"
cassandra-driver = "^3.29.2"
pyyaml = "^6.0.2"
numpy = "^2.1.1"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "src/" ]